fixed links & spacing issues

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,37 @@
 body {
+    width: 90%;
+    margin: 10vw auto;
     background-color: #533747;
 }
 
-h1 {
+.heading {
     color: #86bbbd;
     font-family: 'Vidaloka', serif;
-    font-size: 100px;
+    font-size: 8vw;
 }
 
 p {
     color: #ffffff;
     font-family: 'Lato', sans-serif;
-    font-size: 25px;
-}
-
-.link-group {
-    display: inline-block;
+    font-size: 2vw;
+    line-height: 1.5;
 }
 
 a {
-    color: #86bbbd;
+    color: #ffffff;
     font-family: 'Vidaloka', serif;
-    font-size: 30px;
+    font-size: 2vw;
     text-decoration: none;
+    padding: 100px;
 }
+
+.underline--magical {
+    background-image: linear-gradient(120deg, #86bbbd 0%, #86bbbd 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+  }
+  .underline--magical:hover {
+    background-size: 100% 88%;
+  }
